# event-processor

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  app.sh  app.yml  app_entrypoint.sh  app_setup.sh  awslogs-agent-setup.py  awslogs-agent-setup.sh  backup_db.sh  base.env  config_interpol  connect_to_app.sh  cred_tool  docker-compose.template  docker-compose.yml  entrypoint.sh  event-processor.sql  event_processor  gsave  healthchecks_heartbeat.sh  hello.py  lib  ngrok_setup.sh  pom.xml  pyproject.toml  read_serial  requirements.txt  resin  resin_api.py  sampler.ino  settings.yaml  snapshot_processor  start_hello.sh  supervisord.conf
.devcontainer/: Dockerfile  dev-env-deps.sh  devcontainer-lock.json  devcontainer.json
apfun/: apfun.py  flights.txt  surnames.txt
app/: __main.py__  __main__.py
config/: app.conf  aws-config  aws-credentials  aws.conf  awslogs-config  backup_db  base_worker.patch  cleanup_snapshots  dpkg_list_read_serial  dpkg_list_snapshot_processor  event_processor.conf  event_processor_pip  gammu-smsdrc  healthchecks_heartbeat  ngrok_frontend.yml  pip_freeze  pip_packages  pip_packages_read_serial  pip_packages_snapshot_processor  requirements.txt  rsyslog.conf  snapshot_processor.conf  snapshot_processor_pip  sudoers  supervisord.conf  systemd.app.service  systemd.launch.service  systemd.ngrok.service  vsftpd.conf
config/cron/: backup_db
sampler/: sampler.ino
src/main/java/tailucas/app/: AppConfig.java  AppProperties.java  Device.java  DeviceEvent.java  DeviceUpdate.java  EventHandler.java  EventProcessor.java  MyClass.java  OnePassword.java
src/main/java/tailucas/app/api/: DeviceConfigUpdate.java  EventHandler.java
src/main/java/tailucas/app/device/: Camera.java  Detector.java  Device.java  Event.java  Generic.java  Meter.java  Ring.java  Sensor.java  State.java  Trigger.java  TriggerHistory.java
src/main/java/tailucas/app/device/config/: Config.java  HAConfig.java  Input.java  InputConfig.java  MeterConfig.java  OutputConfig.java
src/main/java/tailucas/app/message/: Mqtt.java  RabbitMq.java
src/main/java/tailucas/app/provider/: DeviceConfig.java  Metrics.java  OnePassword.java
src/main/resources/: application.properties  log4j2.xml
src/test/java/tailucas/app/: AppTest.java  HelloTest.java
src/test/resources/: application.properties  log4j2-test.xml
system/: cleanup_snapshots  read_serial  snapshot_processor  stop_service
templates/: config.html  error.html  event_log.html  index.html  input_config.html  input_link.html  input_output.html  layout.html  login.html  metrics.html  output_config.html  output_link.html
tests/: test_libs.py
util/: gsave
