[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
awscli = "^1.32.93"
influxdb-client = "^1.42.0"
pylru = "^1.2.1"
pytz = "^2024.1"
pyzmq = "^26.0.2"
requests = "^2.31.0"
schedule = "^1.2.2"
sentry-sdk = {extras = ["flask"], version = "^2.0.1"}
flask = "^3.0.3"
flask-compress = "^1.15"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-telegram-bot = "^21.1.1"
aiosqlite = "^0.20.0"
onepasswordconnectsdk = {git = "https://github.com/tglucas/connect-sdk-python.git"}
tailucas-pylib = "^0.4.9"
pydantic = "^2.7.1"
unleashclient = "^5.12.2"
permit = "^2.7.2"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
